update issue 753 z-index調整
git-svn-id: http://aipo.googlecode.com/svn/trunk@2857 b7d4e767-949e-c8c6-5735-6c11b8a2f74f

--- a/war/src/main/webapp/themes/default/css/mobile.css
+++ b/war/src/main/webapp/themes/default/css/mobile.css
@@ -107,6 +107,7 @@ table.roundBlockWrapperTop td.roundBlockTitle a:hover {color:#ffffff}
 	font-size:13px;
 	background:#999999;
 	color:#ffffff;
+	z-index:1001;
 }
 #appsNavigationBack {
 	display:none;
@@ -115,6 +116,7 @@ table.roundBlockWrapperTop td.roundBlockTitle a:hover {color:#ffffff}
 	height:100%;
 	top:0;
 	right:0;
+	z-index:1000;
 }
 #appsNavigationBack a {
 	display:block;
